Added set of new error exception,two factor auth logic implemented
